--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <header id="header">
-    <h1><a href="index.html">Future Imperfect</a></h1>
+    <h1><a href="index.html">SCITECH IIT-H</a></h1>
 		<nav class="links">
 			<ul>
 				<li><a href="#">Lorem</a></li>
