--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,9 @@
 <header id="header">
-    <h1><a href="index.html">SciTech Blog</a></h1>
+    <h1><a href="/index.html">SciTech Blog</a></h1>
 		<nav class="links">
 			<ul>
-				<li><a href="#">Lorem</a></li>
-					<li><a href="#">Ipsum</a></li>
+				<li><a href="/index.html">Home</a></li>
+					<li><a href="/clubs">Clubs</a></li>
 					<li><a href="#">Feugiat</a></li>
 					<li><a href="#">Tempus</a></li>
 					<li><a href="#">Adipiscing</a></li>
