--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,7 +13,7 @@
 			<ul>
 				<li class="search">
 					<a class="fa-search" href="#search">Search</a>
-					<form id="search" method="get" action="#">
+					<form id="search" method="POST" action="#">
 					<input type="text" name="query" placeholder="Search" />
 					</form>
 				</li>
@@ -64,10 +64,4 @@
             </section>
 
         <!-- Actions -->
-            <section>
-                <ul class="actions stacked">
-                    <li><a href="#" class="button large fit">Log In</a></li>
-                </ul>
-            </section>
-
     </section>
